--- a/style.css
+++ b/style.css
@@ -1,26 +1,20 @@
-/* Light mode */
-@media (prefers-color-scheme: light) {
-	:root {
-		--textColor: black;
-		--backgroundColor: 255,255,255;
-	}
+:root {
+	--textColor: black;
+	--backgroundColor: 255,255,255;
 }
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-	:root {
-		--textColor: rgb(240,231,213);
-		--backgroundColor: 37,37,37;
-		/*
-		--textColor: black;
-		--backgroundColor: 255,255,255;
-		*/
-	}
+[data-theme="dark"] {
+	--textColor: rgb(240,231,213);
+	--backgroundColor: 37,37,37;
 }
+/* the redundancy is for backwards compatibility with browsers that do not support CSS variables. */
 body {
+	color: black;
 	color: var(--textColor);
+	background-color: rgb(255,255,255);
 	background-color: rgb(var(--backgroundColor));
-	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(var(--backgroundColor),1), rgba(var(--backgroundColor),1)), url('98.webp');
-	background-size: auto;
+	background-size: auto 1069px, auto;
+	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255,1)), url('98.webp');
+	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(var(--backgroundColor),1)), url('98.webp');
 	background-repeat: no-repeat;
 	font-size: 14px;
 }
@@ -33,19 +27,22 @@ h1,h2,h3,h4,h5,h6 {
 table {
 	font-size: 14px;
 }
-h1 {
-	text-shadow: 1.5px 1.5px 2px rgb(var(--backgroundColor)), 0 0 25px var(--textColor);
-}
 .inputForm {
 	width: 50%;
 	margin-left: 20%;
 	margin-bottom: 50px;
+}
+.formBackground {
+	background-color: rgba(255,255,255,0.5);
 	background-color: rgba(var(--backgroundColor),0.5);
 }
 .factura {
-	margin-left: 20px;
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 0.3s;
 	padding: 20px;
 	width: fit-content;
+	background-color: rgb(255,255,255);
 	background-color: rgb(var(--backgroundColor));
 }
 .pinkText {
@@ -56,7 +53,7 @@ h1 {
 	border-style: solid;
 	border-color: rgb(229,29,147);
 	padding: 7px;
-	margin-block-end: 50px;
+	margin-block-end: 40px;
 	line-height: 1.15;
 }
 .fullWidthTable {
@@ -115,5 +112,39 @@ h6.totalResumenFactura {
 	width: 880px;
 }
 .desgloseFacturaColumn1 {
-	width: 27%;
+	width: 36%;
+}
+.toggle input[type='checkbox'] {
+	display: none;
+}
+.toggle label {
+	background-color: #777;
+	border: 2px solid #555;
+	border-radius: 18px;
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: all ease-in-out 0.3s;
+	width: 34px;
+	height: 18px;
+}
+.toggle label::after {
+	background-color: #555;
+	border-radius: 50%;
+	content: ' ';
+	cursor: pointer;
+	display: inline-block;
+	position: absolute;
+	left: 2px;
+	transition: all ease-in-out 0.3s;
+	width: 14px;
+	height: 14px;
+}
+.toggle input[type='checkbox']:checked ~ label {
+	background-color: #00a0fc;
+	border-color: #006dc9;
+}
+.toggle input[type='checkbox']:checked ~ label::after {
+	background-color: #0054b0;
+	transform: translateX(12px);
 }
